--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
-    <string name="textview">TextView</string>
+    <string name="textview">Please input the following data:</string>
     <string name="brand_name_of_appliance_ex_lg">Brand name of Appliance(Ex. LG)</string>
 </resources>
